--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # //local
-REACT_APP_BACKEND_URL=http://localhost:3001
+# REACT_APP_BACKEND_URL=http://localhost:3001
 
 # //server
-# REACT_APP_BACKEND_URL=https://carmanagementsystem-production.up.railway.app
+REACT_APP_BACKEND_URL=https://carmanagementsystem-production.up.railway.app
