--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.13.2",
+    "canvas-confetti": "^1.9.4",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
     "jwt-decode": "^4.0.0",
